# mepgl

./: .gitignore  CITATION.cff  LICENSE  README.md  TODO.md  batch_post.py  batch_run.py  batched_params.json  collect_results.py  compact_plotter.py  compile.sh  config.py  cover.webm  cut.py  environment.yml  gen_header.py  gen_init.py  gen_launcher.py  mepgl.code-workspace  parameters_helper.py  post.py  reload.py  rtanim.py  run.py
examples/: single_component.py
extra/: parameters_helper.py
mepgl/: batch_post.py  batch_run.py  builder.py  compile.sh  config.py  cut.py  gl.py  mepgl.mplstyle  plot_utilities.py  post.py  rtanim.py  run.py
mepgl/mepgl_lib/: builder.py  gl_utils.py  launcher_utils.py  parameters_helper.py  plot_utilities.py  plot_utils.py  set_rcparams.py
mepgl/src/: CMakeLists.txt  cnpy.cpp  cnpy.h  config.cuh  cuda_errors.cuh  interpolation.cu  interpolation.cuh  io.cu  mepgl.cu  nlcg.cu  nlcg.cuh  parallel_sum.cu  real.cuh
src/: CMakeLists.txt  io.cuh  mep-gl.cu  nlcg.cu  parallel_sum.cuh  real.cuh
